FIX: ㅊontent-wrap content-frame div CSS

--- a/src/main/webapp/resources/css/common.css
+++ b/src/main/webapp/resources/css/common.css
@@ -231,7 +231,7 @@ input, select {
 }
 
 .content-wrap .content-frame div {
-  margin-bottom: 0.5em;
+  <!-- margin-bottom: 0.5em; -->
 }
 
 .content-wrap .content-frame .title {
